Service osztályok módosítása és ExceptionMessage enum létrehozása
- Exception messagek átszervezése az ExceptionMessage enumba.
- Kivétel dobások törlése, ahol nem szükséges.
- Try-catch blokkok rendberakása.